# habitica-ai-cli

./: .env.example  PRD.md  README.md  TODO-V2.md  TODO.md  examples.ipynb  main.py  md_in_habitica.md  pyproject.toml  test.py
.claude/: settings.local.json
src/habitica_forge/: __init__.py  models.py
src/habitica_forge/ai/: __init__.py  llm_client.py  session.py
src/habitica_forge/cli/: __init__.py  commands.py  gamify.py  header.py  interactive.py  main.py  smart.py  style.py  viewer.py
src/habitica_forge/clients/: __init__.py  habitica.py
src/habitica_forge/core/: __init__.py  bounty.py  cache.py  config.py  profession.py  style.py
src/habitica_forge/quest/: __init__.py  archetype.py  legendary.py  tags.py  task_type_rules.py  validator.py
src/habitica_forge/schedule/: __init__.py  scanner.py
src/habitica_forge/scripts/: __init__.py  title_generator.py
src/habitica_forge/styles/: __init__.py  base_template.yaml  cyberpunk.yaml  fantasy.yaml  images.py  images.yaml  loader.py  normal.yaml  wuxia.yaml
src/habitica_forge/utils/: __init__.py  logger.py
src/model/: __init__.py  client.py  models.py
src/services/task/: __init__.py  create_task.py
tests/: __init__.py  test_cache.py  test_cli.py  test_habitica_client.py  test_llm_client.py  test_logger.py  test_models.py  test_smart.py  test_style.py  test_task_service.py
