[project]
name = "habitica-forge"
version = "0.1.0"
description = "Habitica-Forge: 基于大语言模型的智能任务锻造 CLI 工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "rich>=13.9.0",
    "typer>=0.12.0",
    "questionary>=2.0.0",
    "nest_asyncio>=1.6.0",
]

[project.scripts]
forge = "habitica_forge.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = true
